//
// Created by Ajay Sain on 09/09/25.
//

#pragma once

namespace interpreter {

    class Interpreter{
    public:
        void run();
    };

}
